# Ouroboros

./: .gitignore  BaseCMake.cmake  CMakeLists.txt  README.md
include/: Definitions.h  InstanceDefinitions.cuh  Parameters.h  PerformanceMeasure.cuh  Statistics.h  Utility.cuh  Utility.h
include/device/: BulkSemaphore.cuh  BulkSemaphore_impl.cuh  Chunk.cuh  ChunkAccess.cuh  ChunkAccess_impl.cuh  ChunkIndexChunk.cuh  ChunkLocator.cuh  CudaUniquePtr.cuh  Helper.cuh  MemoryIndex.cuh  MemoryInitialization.cuh  MemoryQueries.cuh  Ouroboros.cuh  Ouroboros_impl.cuh  PageIndexChunk.cuh
include/device/queues/: Queue.h  QueueChunk.cuh  QueueChunk_impl.cuh  Queue_impl.cuh  Queues.cuh  Queues_impl.cuh
include/device/queues/chunk/: ChunkQueue.cuh  ChunkQueueVA.cuh  ChunkQueueVA_impl.cuh  ChunkQueueVL.cuh  ChunkQueueVL_impl.cuh  ChunkQueue_impl.cuh
include/device/queues/page/: PageQueue.cuh  PageQueueVA.cuh  PageQueueVA_impl.cuh  PageQueueVL.cuh  PageQueueVL_impl.cuh  PageQueue_impl.cuh
src/: main.cu
